--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: neural-briefing-bot
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --workers 1 main:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 120 main:app
     envVars:
       - key: TELEGRAM_TOKEN
         sync: false
